Text not showing in ios. Fixed

--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,7 @@
   padding: 2rem;
   text-align: center;
   background-color: rgb(255, 255, 246);
+  color: rgb(48, 48, 48);
 }
 
 .card {
